lib/src/compiler/tests/testdata/errors/15.out
error[E011]: invalid range
 --> line:5:11
  |
5 |     $a in (2..1)
  |           ^^^^^^ lower bound (2) is greater than upper bound (1)
  |